--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/iconEfRouting.webp" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>TrackTerra</title>
+        <title>Empleados</title>
     </head>
     <body class="">
         <div id="host" class="overflow-y-auto max-h-screen min-w-[100vw] scrollbar-thin rounded-scrollbar scrollbar-thumb-[#ffff] dark:scrollbar-thumb-[#d2e3ee99] scrollbar-track-transparent"></div>
